# FitWRight

./: .gitignore  .impeccable.md  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.yml  heroku.yml
apps/backend/: CLAUDE.md  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_baseline_current_implicit_schema.py  0002_auth_tables_and_kv.py  0003_add_user_id_to_owned_tables.py  0004_backfill_bootstrap_owner.py  0005_enforce_user_scoping_constraints.py  0006_email_change_tokens.py  0007_admin_soft_delete_counters_metrics.py  0008_admin_search_and_active_indexes.py  0009_resume_versions.py  0010_platform_notifications.py  0011_search_documents.py  0012_reminders_interviews.py  0013_profile_avatar_fields.py  0014_resume_version_cas.py  0015_profile_system.py  0016_profile_public_sharing.py  0017_profile_public_theme.py  0018_profile_image_metadata.py  0019_analysis_artifacts.py  0020_resume_template_settings.py  0021_resume_version_template_settings.py
apps/backend/app/: __init__.py  analysis_cache.py  config.py  config_cache.py  crypto.py  database.py  db_engine.py  diagnostics.py  errors.py  llm.py  llm_ratelimit.py  main.py  migrations_runtime.py  models.py  observability.py  pdf.py  pdf_token.py  repository.py  scheduler.py
apps/backend/app/admin/: __init__.py  ai_metrics.py  config_diag.py  cursor.py  deps.py  errors_metrics.py  health_service.py  job_markers.py  jobs.py  jobs_panel.py  lifecycle.py  maintenance.py  metric_registry.py  metric_store.py  metrics.py  metrics_service.py  overview.py  perf_metrics.py  repo.py  resume_rollup.py  rollup_pipeline.py  schemas.py  security_metrics.py  storage_metrics.py
apps/backend/app/analytics/: __init__.py  feature_usage.py  resume_metrics.py
apps/backend/app/auth/: __init__.py  accounts.py  audit.py  breach.py  captcha.py  context.py  csrf.py  email.py  identity.py  metrics.py  owner.py  passwords.py  principal.py  ratelimit.py  runtime.py  sessions.py  tokens.py
apps/backend/app/events/: __init__.py  jobs.py  outbox.py  types.py
apps/backend/app/jd/: __init__.py  cache.py  canonicalize.py  classify.py  (+14 more)
apps/backend/e2e_monitor/: AGENT_PLAYBOOK.md  README.md  __init__.py  __main__.py  baseline.py  flow.py  gate.py  judge.py  render.py  servers.py
apps/backend/scripts/: verify-postgres.compose.yml  verify_postgres.py  verify_postgres.sh
apps/backend/tests/: conftest.py  test_jd_golden.py  test_jd_performance.py  test_jd_phase2.py  test_jd_phase3.py  test_jd_phase3_activation.py  test_jd_phase4.py  test_jd_v2.py
(+778 files in other folders)
